added medium length export test